<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
    android:id="@+id/tareaTitulo"
    android:lines="2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/responsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tareaVerResponsable"
            android:layout_weight="1.0"
            tools:id="@id/tareaVerResponsable" />

        <TextView
            android:id="@+id/tareaResponsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        <TextView
            android:text="@string/prioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tareaVerPrioridad"
            android:layout_weight="1.0"
            tools:id="@id/tareaVerPrioridad" />

        <TextView
            android:id="@+id/tareaPrioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:id="@+id/tareaVerMinutosAsignados"
            android:text="@string/min_asignados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
        />

        <TextView
            android:id="@+id/tareaMinutosAsignados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
        />

        <TextView
            android:id="@+id/tareaVerMinutosTrabajados"
            android:text="@string/min_trabajados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"

            />

        <TextView
            android:id="@+id/tareaMinutosTrabajados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/tareaFinalizada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/finalizada"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ToggleButton
            android:id="@+id/tareaBtnTrabajando"
            android:textOn="@string/trabajando"
            android:textOff="@string/trabajar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
        <Button
            android:id="@+id/tareaBtnEditarDatos"
            android:text="@string/editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"

            />
        <Button
            android:id="@+id/tareaBtnFinalizada"
            android:text="@string/finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />

        <Button
            android:text="@string/eliminar"
            android:id="@+id/tareaBtnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
    </LinearLayout>
</LinearLayout>