<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_buscar_tareas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dam.isi.frsf.utn.edu.ar.lab05.BuscarTareasActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/seleccione_los_criterios_de_busqueda"
        android:layout_width="match_parent"
        android:id="@+id/tvTitulo"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/minutos_de_desvio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvVerMinDesviados"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etMinDesviados"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <Switch
            android:text="@string/textoSwitch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/switchTareaTerminada"
            android:layout_weight="1" />
        <Button
            android:text="@string/buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bBuscar"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/listas_de_tareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvVerResultado" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvListaTareasResultado" />
    </LinearLayout>

</LinearLayout>
