<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/descripcion_de_la_tarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvVerDescripcionBuscada" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescripcionTareaBuscada" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/responsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tareaVerResponsableBuscada"
            android:layout_weight="1.0"
             />

        <TextView
            android:id="@+id/tareaResponsableBuscada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        <TextView
            android:text="@string/prioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tareaVerPrioridadBuscada"
            android:layout_weight="1.0"
           />

        <TextView
            android:id="@+id/tareaPrioridadBuscada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/tareaVerMinutosAsignadosBuscada"
            android:text="@string/min_asignados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_weight="1.0"
            />

        <TextView
            android:id="@+id/tareaMinutosAsignadosBuscada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_weight="1.0"
            />

        <TextView
            android:id="@+id/tareaVerMinutosTrabajadosBuscada"
            android:text="@string/min_trabajados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_weight="1.0"
            />

        <TextView
            android:id="@+id/tareaMinutosTrabajadosBuscada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_weight="1.0"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/tareaFinalizadaBuscada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/finalizada"/>
    </LinearLayout>
</LinearLayout>